fix: fix text align to left on title

--- a/src/components/CastSection/castSection.module.css
+++ b/src/components/CastSection/castSection.module.css
@@ -7,6 +7,7 @@
   font-size: 25px;
   font-weight: 600;
   margin: 0 0 12px 0;
+  text-align: left;
 }
 
 .castList {
